assets/css/screen.css
/* ... */
table th,
table td {
    padding: 8px;
    line-height: 20px;
    text-align: left;
    vertical-align: top;
    border-top: 1px solid #efefef;
}

table td.date {
    min-width:70pt;
}

table th { color: #000; }

table caption + thead tr:first-child th,
table caption + thead tr:first-child td,
table colgroup + thead tr:first-child th,
table colgroup + thead tr:first-child td,
table thead:first-child tr:first-child th,
table thead:first-child tr:first-child td {
    border-top: 0;
}

table tbody + tbody { border-top: 2px solid #efefef; }

table table table { background-color: #fff; }

table tbody > tr:nth-child(odd) > td,
table tbody > tr:nth-child(odd) > th {
    background-color: #f6f6f6;
}

table.plain {
    tbody > tr:nth-child(odd) > td,
    tbody > tr:nth-child(odd) > th {
        background: transparent;
    }
}


/* ==========================================================================
   3. Utilities - These things get used a lot
   ========================================================================== */

/* Hides shit */
.hidden {
    text-indent: -9999px;
    visibility: hidden;
    display: none;
}

/* Creates a responsive wrapper that makes our content scale nicely */
.inner {
    position: relative;
    width: 80%;
    max-width: 700px;
    margin: 0 auto;
}

/* Centres vertically yo. (IE8+) */
.vertical {
    display: table-cell;
    vertical-align: middle;
}


/* ==========================================================================
   4. General - The main styles for the the theme
   ========================================================================== */

/* Big cover image on the home page */
#site-head {
    position: fixed;
    display: table;
	width: 17em;
    height: 100%;
    margin-bottom: 0;
    text-align: center;
    text-shadow: 0 0 10px #303538;
    color: #fff;
    background: #303538 no-repeat center center;
    background-size: cover;
	top: 0;

}

main.content {
	padding-left: 17em;
}

/* Yo-logo. Yolo-go. Upload one in ghost/settings/ */
#blog-logo img {
    display: block;
    max-height: 100px;
    width: auto;
    margin: 0 0 0 auto;
    line-height: 0;
    border-radius:100%;
}

#back {
    color: rgba(0,0,0,0.2);
    position: fixed;
    top: 8px;
    left: 8px;
    padding: 6px;
    font-size: 16px;
}

/* The details of your blog. Defined in ghost/settings/ */
.blog-title {
    margin: 10px 0 10px 0;
    font-size: 5rem;
    letter-spacing: -1px;
}

.blog-description, .header-link {
    margin: 0;
    font-size: 1.8rem;
    line-height: 1.5em;
    font-weight: 300;
    letter-spacing: 0;
}

#site-head-content {
    text-align:right;
}

.blog-nav-item {
    margin: 0;
    list-style-type: none;
}

.header-link {
	color: white;
	text-decoration: none;
}

/* Every post, on every page, gets this style on its <article> tag */
.post {
    position: relative;
    width:80%;
    max-width: 850px;
    margin: 4rem auto;
    padding-bottom: 4rem;
    border-bottom: #EBF2F6 1px solid;
    word-break: break-word;
    hyphens: auto;
}

/* Add a little circle in the middle of the border-bottom on our .post
   just for the lolz and stylepoints. */
.post:after {
    display: block;
    content: "";
    width: 7px;
    height: 7px;
    border: #E7EEF2 1px solid;
    position: absolute;
    bottom: -5px;
    left: 50%;
    margin-left: -5px;
    background: #fff;
    -webkit-border-radius: 100%;
    -moz-border-radius: 100%;
    border-radius: 100%;
    box-shadow: #fff 0 0 0 5px;
}

.post-thumbnail {
    float: left;
    height: 120px;
    margin-top: 1.25rem;
    width: 25%;
    text-align: center;
}

.post-thumbnail:before {
    content: ' ';
    display: inline-block;
    vertical-align: middle;
    height: 100%;
}

.post-thumbnail img {
    display: inline-block;
    vertical-align: middle;
    max-width: 90%;
    max-height: 90%;
    border-radius: 5px;
}

.post-title {
    margin:0;
}

.post-title a {
    text-decoration: none;
}

.post-excerpt p {
    margin: 1.6rem 0 0 0;
    font-size: 0.9em;
    line-height: 1.6em;
}

.post-meta {
    display: inline-block;
    margin: 0 0 5px 0;
    font-family: 'Open Sans', sans-serif;
    font-size: 1.5rem;
    color: #9EABB3;
}

.post-meta a {
    color: #9EABB3;
    text-decoration: none;
}

.post-meta a:hover {
    text-decoration: underline;
}

.footnotes {
    background-color: #eee;
    font-size: 1.8rem;
    padding-left: 5px;
}

.footnotes::before {
    content: "Footnotes";
    font-weight: bold;
}

.user-meta {
    position: relative;
    padding: 0.3rem 40px 0 100px;
    min-height: 77px;
}

.user-image {
    position: absolute;
    top: 0;
    left: 0;
}

.user-name {
    display: block;
    font-weight: bold;
}

.user-bio {
    display: block;
    max-width: 440px;
    font-size: 1.4rem;
    line-height: 1.5em;
}

.publish-meta {
    position: absolute;
    top: 0;
    right: 0;
    padding: 4.3rem 0 4rem 0;
    text-align: right;
}

.publish-heading {
    display: block;
    font-weight: bold;
}

.publish-date {
    display: block;
    font-size: 1.4rem;
    line-height: 1.5em;
}

/* ==========================================================================
   5. Single Post - When you click on an individual post
   ========================================================================== */

/* Tweak the .post wrapper style */
.post-template .post {
    border-bottom: none;
    padding-bottom: 0;
}

/* Kill that stylish little circle that was on the border, too */
.post-template .post:after {
    display: none;
}

/* Insert some mad padding up in the header for better spacing */
.post-template .post-header {
    padding: 60px 0;
}

/* Keep large images within the bounds of the post-width */
.post-content img {
    display: block;
    max-width: 100%;
    margin: 0 auto;
}

/* The author credit area after the post */
.post-footer {
    position: relative;
    margin: 4rem 0 0 0;
    padding: 4rem 0 0 0;
    border-top: #EBF2F6 1px solid;
}
/* ... */

